fix for overscroll on iOS?

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,24 @@
 
  */
  
+ html {
+	height: 100%;
+	width: 100%;
+	overflow: hidden;
+ }
+ body {
+color: Azure;
+font-family:arial;
+background-color: #27444F;
+margin: 0px;
+height: 100%;
+width: 100%;
+overflow-y: auto;
+overflow-x: auto;
+z-index: -100;
+position: absolute;
+}
+
  h1{
 text-align: center;
 margin-bottom: 5px;
@@ -37,13 +55,6 @@ margin-bottom: -65px;
 a {
  text-decoration: none;
  color: LightSlateGrey ;
-}
-
-body {
-color: Azure;
-font-family:arial;
-background-color: #27444F;
-margin: 0px;
 }
 
 #clearfix {
